fix: nav z-index

--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ nav.hide {
     right: 0;
     top: 0;
     transform: translateY(0);
+    z-index: 1;
 }
 
 sidenav {
